--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
         <section>
           <h1>Matthew Tift</h1>
-          <h3><a style="text-decoration: none;" href="https://matthewtift.com/talks/d8">matthewtift.com/talks/badcamp-cmi</a></h3>
+          <h3><a style="text-decoration: none;" href="https://matthewtift.com/badcamp-cmi">matthewtift.com/talks/badcamp-cmi</a></h3>
           <h3>Drupal.org: <a style="text-decoration: none;" href="http://drupal.org/user/751908">mtift</a></h3>
           <h3>Twitter: <a style="text-decoration: none;" href="https://twitter.com/matthewtift">@matthewtift</a></h3>
         </section>
