--- a/index.html
+++ b/index.html
@@ -267,6 +267,14 @@
         </section>
 
         <section>
+          <h1>How do I setup version control?</h1>
+        </section>
+
+        <section>
+          <h1>Why do configuration files use .yml?</h1>
+        </section>
+
+        <section>
           <h2>Configuration Management:</h2>
           <h2>How You Can Help</h2>
           <h3><a href="https://drupal8cmi.org">drupal8cmi.org</a></h3>
@@ -275,8 +283,8 @@
 
         <section>
           <h1>Matthew Tift</h1>
-          <h3><a style="text-decoration: none;" href="https://matthewtift.com/badcamp-cmi">matthewtift.com/talks/badcamp-cmi</a></h3>
           <h3>Drupal.org: <a style="text-decoration: none;" href="http://drupal.org/user/751908">mtift</a></h3>
+          <h3>Web: <a style="text-decoration: none;" href="https://matthewtift.com">matthewtift.com</a></h3>
           <h3>Twitter: <a style="text-decoration: none;" href="https://twitter.com/matthewtift">@matthewtift</a></h3>
         </section>
 
