Fix URL to not use HTTPS

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <section>
           <h1>Matthew Tift</h1>
           <h3>Drupal.org: <a style="text-decoration: none;" href="http://drupal.org/user/751908">mtift</a></h3>
-          <h3>Web: <a style="text-decoration: none;" href="https://matthewtift.com">matthewtift.com</a></h3>
+          <h3>Web: <a style="text-decoration: none;" href="http://matthewtift.com">matthewtift.com</a></h3>
           <h3>Twitter: <a style="text-decoration: none;" href="https://twitter.com/matthewtift">@matthewtift</a></h3>
         </section>
 
