Tweak a few more stylistic things

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
         <section>
           <h1>Synchronize Changes</h1>
-          <img alt="yml files" src="images/synchronize-changes.png" />
+          <img alt="synchronize changes" src="images/synchronize-changes.png" />
         </section>
 
         <section>
@@ -271,7 +271,7 @@
         </section>
 
         <section>
-          <h1>Why do configuration files use .yml?</h1>
+          <h1>Why use <code>.yml</code> files and not another format?</h1>
         </section>
 
         <section>
